set compiler release flag to the correct java version